# projet_python_2_mba

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.streamlit  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  tests.yml
banking_api/: main.py
banking_api/models/: __init__.py  customer.py  fraud.py  stats.py  transaction.py
banking_api/routes/: customers.py  transactions.py
banking_api/services/: customer_service.py  data_cache.py  fraud_detection_service.py  fraud_labels_loader.py  stats_service.py  transactions_service.py
streamlit_app/: app.py
tests/: README.md  __init__.py  conftest.py  test_api_routes.py  test_convert_types.py  test_customer_service.py  test_edge_cases.py  test_error_handling.py  test_fraud_detection.py  test_fraud_detection_service.py  test_services.py  test_stats_service.py  test_transactions_service.py
tests/fixtures/: test_fraud_labels.json  test_transactions.csv
tests_unittest/: README.md  __init__.py  test_customer_service.py  test_fraud_detection_service.py  test_stats_service.py  test_transactions_service.py
