[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-transactions-api"
version = "1.0.0"
description = "API REST pour la gestion et l'analyse de transactions bancaires"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Camille Thauvin", email = "camille.thauvin@example.com"}
]
keywords = ["banking", "transactions", "api", "fastapi", "fraud-detection", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "autopep8>=2.0.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]
test = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/CamilleThauvin/projet_python_2_mba"
Repository = "https://github.com/CamilleThauvin/projet_python_2_mba"
Issues = "https://github.com/CamilleThauvin/projet_python_2_mba/issues"

[project.scripts]
banking-api = "banking_api.main:app"

[tool.setuptools]
packages = ["banking_api", "banking_api.services", "banking_api.routes", "banking_api.models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --disable-warnings"

[tool.coverage.run]
source = ["banking_api"]
omit = ["*/tests/*", "*/tests_unittest/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
